--- a/app/views/shared/_winner.html.erb
+++ b/app/views/shared/_winner.html.erb
@@ -2,6 +2,8 @@
   <p class="winner"><i class="fas fa-arrow-right"></i>   <%= shotgun.user_id.nil? ? "Guest User" : shotgun.user.username %></p>
 <% end %>
 
-<% @list.shotguns.drop(@list.places).each do |shotgun| %>
-  <p class="waitlist"><i class="fas fa-arrow-right"></i>   <%= shotgun.user_id.nil? ? "Guest User" : shotgun.user.username %></p>
+<% if @list.shotguns.count > @list.places %>
+  <% @list.shotguns.drop(@list.places).each do |shotgun| %>
+    <p class="waitlist"><i class="fas fa-arrow-right"></i>   <%= shotgun.user_id.nil? ? "Guest User" : shotgun.user.username %></p>
+  <% end %>
 <% end %>
