--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -234,3 +234,36 @@
   }
 
 }
+
+.chatroom-btn-access {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    background: linear-gradient(to right, #010234, #3F1964);
+    border: none;
+    transition: 0.2s ease-in-out;
+  }
+
+  button:hover {
+    transform: scale(1.10);
+    box-shadow: 0px 0px 20px #F48DF0;
+  }
+
+  button:focus {
+    border: none;
+    box-shadow: none;
+  }
+  i {
+    color: white;
+  }
+}
