--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -57,9 +57,11 @@
 
 <% if user_signed_in? %>
   <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-    Launch static backdrop modal
-  </button>
+  <div class="chatroom-btn-access">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      <i class="fas fa-comment-dots"></i>
+    </button>
+  </div>
 
   <!-- Modal -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
