email->username #index // disable button after click createListBtn/shotgunBtn

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -10,7 +10,7 @@
       <% else %>
         <p><span><%= list.shotguns.count%> / <%=list.places%></span> - Waiting List</p>
       <% end %>
-      <%= list.user.email %>
+      <%= list.user.username %>
     </div>
     <div class="alexis-card-right-element">
       <p><%=list.end_time.strftime('%D')%></p>
