--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-direction: column;
   height: 91vh;
+  position: relative;
 }
 
 .alexis-marketplace-second {
@@ -64,8 +65,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  overflow: scroll;
-  height: 74.5vh;
+  // overflow: scroll;
+  // height: 74.5vh;
 }
 // CARD
 
@@ -150,17 +151,23 @@
 }
 
 .alexis-marketplace-container-create-btn {
+  background: linear-gradient(to top, #FD7B7B 65%, transparent);
   display: flex;
   align-items: center;
   justify-content: center;
   height: 10vh;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+
 
   .alexis-marketplace-create-btn {
-    background-color: #B000B9;
+    // background-color: #B000B9;
     height: 50px;
-    width: 50px;
+    width: 75%;
     border-radius: 50%;
     transition: 0.2s ease-in-out;
+    padding-bottom: 25px;
 
     a {
       display: flex;
