--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -98,11 +98,17 @@
     p {
       margin: 0;
       font-family: 'Gilroy-Medium';
-      font-size: 0.7rem;
+      font-size: 0.8rem;
     }
 
-    .alexis-user-email {
-      font-size: 0.80rem;
+    .alexis-user-email p {
+      font-family: 'Gilroy-Medium';
+      font-size: 0.9rem;
+    }
+
+    .alexis-user-email p span {
+      font-family: 'Gilroy-Medium';
+      font-size: 0.7rem;
     }
   }
 
