--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -99,15 +99,15 @@
 
   .card-creator-name p {
     color: white;
-    font-size: 14px;
+    font-size: 0.8rem;
     font-family: 'Gilroy-Medium';
     margin: 0;
   }
 
   .card-creator-name p span {
     color: white;
-    font-size: 14px;
-    font-family: 'Gilroy-Bold';
+    font-size: 0.9rem;
+    font-family: 'Gilroy-Medium';
   }
 
   //CARD CREATION TIME
@@ -118,7 +118,7 @@
   }
 
   .card-creation-time p {
-    font-size: 10px;
+    font-size: 0.8rem;
     font-family: 'Gilroy-Medium';
     margin: 0;
   }
