corrected responsive for text element

--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -208,3 +208,12 @@
     }
   }
 }
+
+@media screen and (max-width: 374px) {
+  .alexis-card-left-element {
+
+  }
+  .alexis-card-right-element {
+    text-align: right;
+  }
+}
