--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -28,6 +28,11 @@
 
   .Arti-success {
     color: white;
+
+    pre {
+      white-space: normal;
+      text-align: center;
+    }
   }
 }
 .arti-alert {
