les arrow changent de color en fonction du status

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -293,3 +293,13 @@
   height: 100%;
   width: 100%;
 }
+
+// SHOTGUNERS ARROW
+
+.winner{
+  color: hsl(305, 76%, 69%);
+}
+
+.waitlist{
+  color: hsla(184, 100%, 47%, 0.81);
+}
