finalized the create button

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -34,3 +34,7 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
   font-family: "Gilroy-HeavyItalic";
   src: font-url('Gilroy-HeavyItalic.ttf');
 }
+@font-face {
+  font-family: "Gilroy-BoldItalic";
+  src: font-url('Gilroy-BoldItalic.ttf');
+}
