--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -27,11 +27,7 @@
   </div>
   <div class="alexis-marketplace-container-create-btn">
     <div class="alexis-marketplace-create-btn">
-      <%= link_to new_list_path do %>
-        <div class="shotgun-cta">
-          <h3>Create new list</h3>
-        </div>
-      <% end %>
+      <%= link_to "Create new list", new_list_path %>
     </div>
   </div>
 </div>
