--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -4,12 +4,12 @@
   justify-content: center;
   flex-direction: column;
   height: 91vh;
-  position: relative;
+  // position: relative;
 }
 
 .alexis-marketplace-second {
   height: 100%;
-  width: 90%;
+  // width: 90%;
 }
 
 // LINK GENERAL
@@ -65,8 +65,13 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  // overflow: scroll;
-  // height: 74.5vh;
+  overflow: scroll;
+  height: 100%;
+  position: fixed;
+
+  .lists {
+    padding-bottom: 200px;
+  }
 }
 // CARD
 
@@ -156,23 +161,22 @@
 }
 
 .alexis-marketplace-container-create-btn {
-  background: linear-gradient(to top, #FD7B7B 20%, transparent);
+  // background: linear-gradient(to top, #FD7B7B 20%, transparent);
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 10vh;
+  height: 9vh;
   width: 100%;
   position: fixed;
   bottom: 0;
-
+  background: #b011b9;
 
   .alexis-marketplace-create-btn {
     // background-color: #B000B9;
-    height: 50px;
-    width: 75%;
+    // height: 50px;
+    width: 100%;
     border-radius: 50%;
     transition: 0.2s ease-in-out;
-    padding-bottom: 25px;
 
     a {
       display: flex;
@@ -182,6 +186,8 @@
       color: white;
       height: 100%;
       width: 100%;
+      font-family: 'Gilroy-BoldItalic';
+      font-size: 26px;
     }
   }
 
