--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -177,6 +177,13 @@
     margin-bottom: 5px;
   }
 
+  // WINNER
+  .winner {
+    i {
+      color: rgb(49, 218, 114);
+    }
+  }
+
 
   // SHARING LINK CONTAINER
   .sharing-link-container {
