--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div id="message-<%= message.id %>">
+<div id="message-<%= message.id %>" class="message">
   <small>
     <strong class="<%= current_user.username == message.user.username ? "my-messages" : "other-messages" %>"><%= message.user.username %></strong>
     <i><%= message.created_at.in_time_zone("Europe/Paris").strftime("%b %e at %l:%M %p") %></i>
