--- a/app/views/shared/_winner.html.erb
+++ b/app/views/shared/_winner.html.erb
@@ -5,5 +5,6 @@
 <% if @list.shotguns.count > @list.places %>
   <% @list.shotguns.drop(@list.places).each do |shotgun| %>
     <p><i class="fas fa-arrow-right waitlist"></i>   <%= shotgun.user_id.nil? ? "Guest User" : shotgun.user.username %></p>
+    <%# icone sablier fas fa-hourglass-half %>
   <% end %>
 <% end %>
