--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -187,6 +187,14 @@
     }
   }
 
+  // WAITER
+  .shotgunners-list {
+    i.waitlist {
+      height: 15px;
+      width: 15px;
+    }
+  }
+
 
   // SHARING LINK CONTAINER
   .sharing-link-container {
