Card responsive fix, button create hover, burger menu more responsive

--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -196,8 +196,15 @@
 
   .alexis-marketplace-create-btn:hover {
     transform: scale(1.05);
-    box-shadow: 0px 0px 39px 7px rgba(255px, 86px, 242px, 0.8);
   }
+}
+
+.alexis-marketplace-container-create-btn:hover {
+  background-color: #cf35d9;
+}
+
+.div-my-shot {
+  width: 96.5%;
 }
 
 @media screen and (max-width: 340px) {
