text and button position fix

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -296,6 +296,10 @@
 
 // CHATROOM DESIGN
 .modal-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
   #message_content {
     background: white;
