--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -172,3 +172,29 @@ a {
     width: 10%;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .Arti-QR {
+    padding-top: 140px;
+  }
+  .qr-code-logo {
+    top: 55%;
+    width: 20%;
+  }
+}
+
+
+
+
+// FAQ (questions) page
+
+.question-title {
+  margin-top: 10%;
+}
+
+#CTA-FAQ {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: white;
+  font-weight: bolder;
+}
