--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,9 +31,12 @@
     <% end %>
   </div>
 </div>
-<div class="container my-5">
+
+<!-- QR CODE - Check responsiveness -->
+
+<!-- <div class="container my-5">
   <div class="card-category Arti-QR">
     <%= @svg.html_safe %>
     <%= image_tag "favicon.png", class: "qr-code-logo" %>
   </div>
-</div>
+</div> -->
