--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><%= link_to "Home", root_path, class: "dropdown-item" %></li>
                   <li><%= link_to "Lists", lists_index_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "FAQs", questions_path, class: "dropdown-item" %></li>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
                 </ul>
             <% else %>
