Limited chat to winners once the list ends

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -261,6 +261,16 @@
 }
 
 // CHATROOM BTN
+.block-chat {
+  color: white;
+  font-size: 15px;
+  font-family: 'Gilroy-Medium';
+  margin-left: 10px;
+  width: auto;
+  margin-bottom: 0;
+  padding-top: 3px;
+}
+
 .chatroom-btn-access {
   margin-top: 20px;
   display: flex;
