amelioration for the design

--- a/app/assets/stylesheets/components/_marketplace.scss
+++ b/app/assets/stylesheets/components/_marketplace.scss
@@ -205,6 +205,9 @@
 
 .div-my-shot {
   width: 96.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 340px) {
