--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: linear-gradient(115deg, #BB11B0, #FD7B7B);
+  background: linear-gradient(115deg, #FA74C2, #FDD999);
   background-attachment: fixed;
 }
 
@@ -181,20 +181,4 @@ a {
     top: 55%;
     width: 20%;
   }
-}
-
-
-
-
-// FAQ (questions) page
-
-.question-title {
-  margin-top: 10%;
-}
-
-#CTA-FAQ {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: white;
-  font-weight: bolder;
 }
