--- a/app/views/pages/questions.html.erb
+++ b/app/views/pages/questions.html.erb
@@ -2,19 +2,19 @@
   <div class="home-body-container">
     <div class="home-title">
       <h1>FAQs</h1>
-      <h5 class= "question-title">What is a public list?</h5>
+      <h2 class= "question-title">What is a public list?</h2>
     </div>
     <div class="home-text">
       <p>A public list will appear in the Public tab of Shotgunz and therefore be available to any Shotgunner. A private list is only visible to those that reach it through its link!</p>
     </div>
     <div class="home-text question-title">
-      <h5>Is there an issue with timezones?</h5>
+      <h2 class= "question-title">Is there an issue with timezones?</h2>
     </div>
     <div class="home-text">
       <p>At the moment, the app is set on the Central European Timezone. We are working to allow you to set dates from anywhere. Please keep it in mind when creating and bear with us while we further develop the app!</p>
     </div>
     <div class="home-text question-title">
-      <h5>What are emails for?</h5>
+      <h2 class= "question-title">What are emails for?</h2>
     </div>
     <div class="home-text">
       <p>The emails are necessary to allow you to login and keep track of the lists you've participated in! This information is not available to other users and we've made list chats in order to avoid spamming your inbox!</p>
