Added FAQ, available unsigned in

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,9 +10,9 @@
     <div class="home-text">
       <p>It’s simple, first come first served. When a user creates a shotgun list, he specifies how many people can qualify. The first ones to shotgun qualify, the rest go to the waiting list.</p>
     </div>
-    <%= link_to lists_path do %>
+    <%= link_to questions_path do %>
       <div class="give-it-a-shot-cta">
-        <div class="cta-text">GIVE IT A SHOT</div>
+        <div class="cta-text">FAQs</div>
         <div class="cta-btn">
           <i class="fas fa-chevron-right"></i>
         </div>
