Tweak to FAQ button

--- a/app/views/pages/questions.html.erb
+++ b/app/views/pages/questions.html.erb
@@ -29,9 +29,9 @@
     <div class="home-title" id="CTA-FAQ">
       <h4>Have another <b>question</b>? Get in touch with us through our feedback form on the left!</h4>
     </div>
-    <%= link_to lists_path do %>
+    <%= link_to root_path do %>
       <div class="shotgun-cta">
-        <h3>Go to lists</h3>
+        <h3>Go to homepage</h3>
       </div>
       <% end %>
   </div>
